Updates to user's guide template.

--- a/User-Guide/Users.tex
+++ b/User-Guide/Users.tex
@@ -82,10 +82,11 @@
 \frontmatter
 \maketitle
 \begin{center}
-This document is \copyright \comment{this year} \comment{your name}.  All rights reserved.
+This document is \copyright \comment{this year} \comment{your name}.  All rights reserved.  \comment{You may wish to adjust this if you are using some other license (such as one of the CC ones).}
 
 \paragraph{}Note that this is a draft version and not the final version for publication.
 \end{center}
+\comment{This document template is available for anyone who wishes to use it.  The final document produced by using this template may be licensed however you wish.}
 \tableofcontents
 
 \mainmatter
@@ -105,7 +106,7 @@ This collections is currently available on \comment{location where project can b
 \subsection{Ada Libraries}
 \comment{For embedded application, it might be useful to know which Ada packages are used}
 \subsection{Other Libraries}
-\comment{You may wish to list only external packages or all packages that are used}
+\comment{You may wish to list only external packages or all packages that are used.}
 
 %========================================================
 \chapter{Usage Instructions}
