--- a/User-Guide/Users.tex
+++ b/User-Guide/Users.tex
@@ -20,6 +20,7 @@
 \usepackage{multicol}
 \usepackage{xcolor}
 %
+\usepackage{tikz}
 \usepackage[pdf]{pstricks}
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf}
@@ -43,6 +44,8 @@
 \newcommand{\constant}[1]{\emph{\texttt{#1}}}
 \newcommand{\keyword}[1]{\texttt{#1}}
 \newcommand{\datatype}[1]{\texttt{#1}}
+\newcommand{\filename}[1]{\texttt{#1}}
+\newcommand{\cli}[1]{\texttt{#1}}
 \newcommand{\uvec}[1]{\textnormal{\bfseries{#1}}}
 \newcommand{\comment}[1]{{\color{red}{#1}}}
 %
@@ -82,7 +85,7 @@
 \frontmatter
 \maketitle
 \begin{center}
-This document is \copyright \comment{this year} \comment{your name}.  All rights reserved.  \comment{You may wish to adjust this if you are using some other license (such as one of the CC ones).}
+This document is \copyright \comment{this year}, \comment{your name}.  All rights reserved.  \comment{You may wish to adjust this if you are using some other license (such as one of the CC ones).}
 
 \paragraph{}Note that this is a draft version and not the final version for publication.
 \end{center}
@@ -92,12 +95,17 @@ This document is \copyright \comment{this year} \comment{your name}.  All rights
 \mainmatter
 %========================================================
 \chapter{Introduction}
+
+\section{About the Project}
 \comment{Place some introductory text here giving a brief description of the project.}
+
+\section{License}
+\comment{How is the project licensed?}
 
 %========================================================
 \chapter{How to Obtain}
 
-This collections is currently available on \comment{location where project can be found}.
+This collection is currently available on \comment{location where project can be found}.
 
 \comment{Any other ways of obtaining the project?}
 
@@ -111,6 +119,12 @@ This collections is currently available on \comment{location where project can b
 %========================================================
 \chapter{Usage Instructions}
 \comment{This chapter contains the high level usage instructions for the project.  If it is a library, what needs to be done to use it from another project.  If it is an application, how to build and run the application.}
+
+\subsection{How to Include in Your Project}
+\comment{If this project is a library, this will probably be just editing your .gpr file to point to this project's .gpr file.  Something is definitely needed if it is more complicated.  If the project is not a library, then this section can be omitted.}
+
+\subsection{How to Build Program}
+\comment{If this project has an application, this may be as simple as \cli{gprbuild project.gpr}, or it may be more complicated.  Add comments if it is more complicated.  If the project does not have an application, then this section can be omitted.}
 
 %========================================================
 \chapter{API Description}
